# cv-reviewer

./: .dockerignore  CHANGELOG.md  Dockerfile.agent  Dockerfile.ui  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  docker-prune.yml  docker-publish.yml  release.yml
agent_lapangan/: agent.py  prompt.py
agent_lapangan/tools/: cv_parser.py  cv_scoring.py  job_recommendation.py  read_pdf.py
pages/: conversation_page.py  setting_page.py
