[project]
name = "kernel-debug"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "google-adk>=1.16.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.4.1",
]
test = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
branch = "main"
version_source = "tag"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_types = "build,chore,ci,docs,feat,fix,perf,style,refactor,test"
minor_types = "feat"
patch_types = "fix,perf"

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
# Refer to: https://python-semantic-release.readthedocs.io/en/latest/index.html
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
